k8s/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: sre-demo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: sre-demo-strip-api@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 80
