k8s/ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: sre-demo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: sre-demo-strip-prometheus@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
